fix overlapping stickybar

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -150,7 +150,7 @@
     background-color: rgb(233, 190, 190);
     padding: 15px;
     width: 100%;
-    // height: 220px;
+    z-index: 2;
 
     h3 {
         font-weight: bold;
@@ -203,7 +203,7 @@
 }
 
 .td-width {
-    width: 100px; // for table photo td
+    width: 30%; // for table photo td
 }
 
 .vertical-align-top td {
